--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.27",
     "@types/uuid": "^9.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-uuid": "^2.0.0",
+    "styled-components": "^6.0.8",
     "typescript": "^4.4.2",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.0"
